# outsourcing_company

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  setup_prisma.py
outsourcing_company/: asgi.py  settings.py  urls.py  wsgi.py
prisma/: __init__.py  package-lock.json  package.json  prisma.py  schema.prisma
